--- a/ArchitectureComponentsDemo/app/src/main/res/layout/account_item.xml
+++ b/ArchitectureComponentsDemo/app/src/main/res/layout/account_item.xml
@@ -8,11 +8,11 @@
             type="com.adamzfc.architecturecomponentsdemo.vo.Account"/>
     </data>
     <LinearLayout
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="@{account.id}"
+            android:text="@{String.valueOf(account.id)}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
