--- a/ArchitectureComponentsDemo/app/src/main/res/layout/account_fragment.xml
+++ b/ArchitectureComponentsDemo/app/src/main/res/layout/account_fragment.xml
@@ -21,9 +21,11 @@
             app:layoutManager="LinearLayoutManager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+
+        <!--android:onClick="@{() -> presenter.addAccount()}"-->
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
-            android:onClick="@{() -> presenter.addAccount()}"
+            android:onClick="@{() -> presenter.getAccounts()}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
