--- a/ArchitectureComponentsDemo/app/src/main/res/layout/account_item.xml
+++ b/ArchitectureComponentsDemo/app/src/main/res/layout/account_item.xml
@@ -5,27 +5,36 @@
     <data>
         <variable
             name="account"
-            type="com.adamzfc.architecturecomponentsdemo.vo.Account"/>
+            type="com.adamzfc.architecturecomponentsdemo.data.vo.Account"/>
     </data>
-    <android.support.v7.widget.CardView
+
+    <Button
+        android:layout_marginStart="@dimen/horizontal_page_margin"
+        android:layout_marginLeft="@dimen/horizontal_page_margin"
+        android:layout_marginEnd="@dimen/horizontal_page_margin"
+        android:layout_marginRight="@dimen/horizontal_page_margin"
+        android:text="@{@string/account_title(String.valueOf(account.id), account.name)}"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_marginStart="@dimen/horizontal_page_margin"
-                android:layout_marginLeft="@dimen/horizontal_page_margin"
-                android:text="@{String.valueOf(account.id)}"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:layout_marginStart="@dimen/horizontal_page_margin"
-                android:layout_marginLeft="@dimen/horizontal_page_margin"
-                android:text="@{account.name}"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+        android:layout_height="wrap_content"/>
+    <!--<android.support.v7.widget.CardView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+        <!--<LinearLayout-->
+            <!--android:orientation="horizontal"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
+            <!--<TextView-->
+                <!--android:layout_marginStart="@dimen/horizontal_page_margin"-->
+                <!--android:layout_marginLeft="@dimen/horizontal_page_margin"-->
+                <!--android:text="@{String.valueOf(account.id)}"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"/>-->
+            <!--<TextView-->
+                <!--android:layout_marginStart="@dimen/horizontal_page_margin"-->
+                <!--android:layout_marginLeft="@dimen/horizontal_page_margin"-->
+                <!--android:text="@{account.name}"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"/>-->
+        <!--</LinearLayout>-->
+    <!--</android.support.v7.widget.CardView>-->
 </layout>
